--- a/loginApp/package.json
+++ b/loginApp/package.json
@@ -1,31 +1,5 @@
 {
-    "name": "redux-micro-frontend-sample-counter",
-    "version": "0.0.0",
-    "license": "MIT",
-    "description": "This is a sample app with counter",
-    "author": {
-        "name": "Pratik Bhattacharya",
-        "email": "pratikb@microsoft.com",
-        "url": "https://www.devcompost.com/"
-    },
-    "homepage": "https://github.com/microsoft/redux-micro-frontend",
-    "keywords": [
-        "redux",
-        "micro frontend",
-        "microfrontend",
-        "microfrontends",
-        "micro frontends",
-        "state",
-        "statemanagement"
-    ],
-    "bugs": {
-        "url": "https://github.com/microsoft/redux-micro-frontend/issues",
-        "email": "pratikb@microsoft.com"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/microsoft/redux-micro-frontend"
-    },
+    "name": "loginapp",
     "scripts": {
         "build": "webpack",
         "start": "webpack serve",
@@ -49,9 +23,7 @@
         "style-loader": "^2.0.0",
         "webpack": "^5.1.3",
         "webpack-cli": "^4.1.0",
-        "webpack-dev-server": "^3.11.2"
-    },
-    "dependencies": {
+        "webpack-dev-server": "^3.11.2",
         "@reduxjs/toolkit": "^1.6.1"
     }
 }
