--- a/loginApp/package.json
+++ b/loginApp/package.json
@@ -11,6 +11,7 @@
         "@babel/core": "^7.12.3",
         "@babel/preset-env": "^7.12.1",
         "@babel/preset-react": "^7.12.1",
+        "@reduxjs/toolkit": "^1.6.1",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
@@ -23,7 +24,6 @@
         "style-loader": "^2.0.0",
         "webpack": "^5.1.3",
         "webpack-cli": "^4.1.0",
-        "webpack-dev-server": "^3.11.2",
-        "@reduxjs/toolkit": "^1.6.1"
+        "webpack-dev-server": "^4.3.0"
     }
 }
