--- a/shell/package.json
+++ b/shell/package.json
@@ -14,6 +14,8 @@
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^5.0.0",
         "html-webpack-plugin": "^4.5.0",
+        "react-redux": "^7.2.5",
+        "redux": "^4.1.1",
         "style-loader": "^2.0.0",
         "webpack": "^5.1.3",
         "webpack-cli": "^4.1.0",
