--- a/loginApp/package.json
+++ b/loginApp/package.json
@@ -28,5 +28,8 @@
         "webpack-cli": "^4.1.0",
         "webpack-dev-server": "^4.3.0"
     },
-    "dependencies": {}
+    "dependencies": {
+        "react-router": "^5.2.1",
+        "react-router-dom": "^5.3.0"
+    }
 }
