--- a/loginApp/package.json
+++ b/loginApp/package.json
@@ -16,6 +16,7 @@
         "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^5.0.0",
+        "firebase": "^9.1.1",
         "html-webpack-plugin": "^4.5.0",
         "path-parse": "^1.0.7",
         "react": "^16.14.0",
