add: firebase auth

--- a/loginApp/package.json
+++ b/loginApp/package.json
@@ -21,6 +21,7 @@
         "path-parse": "^1.0.7",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
+        "react-loader-spinner": "^4.0.0",
         "react-redux": "^7.2.5",
         "redux": "^4.1.1",
         "redux-micro-frontend": "^1.1.1",
