--- a/profileApp/package.json
+++ b/profileApp/package.json
@@ -19,6 +19,7 @@
         "html-webpack-plugin": "^4.5.0",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
+        "react-loader-spinner": "^4.0.0",
         "react-redux": "^7.2.5",
         "react-router": "^5.2.1",
         "react-router-dom": "^5.3.0",
