--- a/profileApp/package.json
+++ b/profileApp/package.json
@@ -16,6 +16,7 @@
         "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^5.0.0",
+        "firebase": "^9.1.2",
         "html-webpack-plugin": "^4.5.0",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
